tests/baselines/reference/metadataOfClassFromAlias2(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
auxiliry.ts(2,5): error TS2564: Property 'field' has no initializer and is not definitely assigned in the constructor.
test.ts(6,19): error TS2564: Property 'array' has no initializer and is not definitely assigned in the constructor.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== auxiliry.ts (1 errors) ====
    export class SomeClass {
        field: string;
        ~~~~~
!!! error TS2564: Property 'field' has no initializer and is not definitely assigned in the constructor.
    }
    
==== test.ts (1 errors) ====
    import { SomeClass } from './auxiliry';
    function annotation(): PropertyDecorator {
        return (target: any): void => { };
    }
    export class ClassA {
        @annotation() array: SomeClass | null | string;
                      ~~~~~
!!! error TS2564: Property 'array' has no initializer and is not definitely assigned in the constructor.
    }